// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentJs given user name renders correctly 1`] = `
<div class="v-card v-sheet theme--light">Dummy component<div>Hello John Doe</div>
</div>
`;

exports[`ComponentJs given user name renders correctly with props 1`] = `
<div class="v-card v-sheet theme--light">My dummy Component<div>Hello John Doe</div>
</div>
`;

exports[`ComponentJs renders correctly 1`] = `
<div class="v-card v-sheet theme--light">Dummy component<div>Hello </div>
</div>
`;

exports[`ComponentJs renders correctly with props 1`] = `
<div class="v-card v-sheet theme--light">My dummy Component<div>Hello </div>
</div>
`;
